[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://Experimental/StepMarker.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="StepMarker" type="Sprite" groups=["Step"]]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1560, 408, 16, 16 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = -8.0
text = "0"
align = 1

[node name="ClickDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickDetector"]
shape = SubResource( 1 )

[node name="Options" type="Control" parent="."]
visible = false
margin_left = -41.0
margin_top = -31.0
margin_right = 47.0
margin_bottom = 39.0

[node name="HSlider" type="HSlider" parent="Options"]
margin_left = 10.0
margin_top = 35.0
margin_right = 74.0
margin_bottom = 51.0
max_value = 8.0

[node name="Deselection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deselection"]
shape = SubResource( 2 )

[connection signal="input_event" from="ClickDetector" to="." method="_on_ClickDetector_input_event"]
[connection signal="value_changed" from="Options/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="mouse_entered" from="Deselection" to="." method="_on_Deselection_mouse_entered"]
